# bijux-atlas

./: .dockerignore  .gitattributes  .gitignore  .vale  .vale.ini  ARCHITECTURE.md  CHANGELOG.md  CLIENTS.md  CONTRACT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  REPO_MAP.md  SECURITY.md  audit-allowlist.toml  charts  clippy.toml  datasets  deny.toml  e2e  fixtures  load  mkdocs.shared.yml  mkdocs.yml  nextest.toml  observability  python-toolchain.toml  root-surface.json  rustfmt.toml
crates/bijux-atlas/: CHANGELOG.md  CONTRACT.md  Cargo.toml  README.md  build.rs
crates/bijux-atlas-api/: ARCHITECTURE.md  BENCHMARKS.md  CONTRACT.md  Cargo.toml  ERROR_TAXONOMY.md  EXAMPLES.md  PUBLIC_API.md  README.md  VERSIONING.md
crates/bijux-atlas-api/benches/: openapi_generation.rs
crates/bijux-atlas-api/docs/: API_CONTRACT.md  API_STABILITY.md  ARCHITECTURE.md  EFFECTS.md  ERRORS.md  INDEX.md  OPENAPI.md  PATTERNS.md  PUBLIC_API.md  PUBLIC_SURFACE_CHECKLIST.md  VERSIONING.md  api-contract.md  api-stability.md  architecture.md  benchmarks.md  contracts.md  effect-boundary-map.md  errors.md  examples.md  index.md  openapi.md  patterns.md  public-api.md  testing.md  versioning.md  wire-compatibility.md
crates/bijux-atlas-api/examples/: openapi_contract.rs
crates/bijux-atlas-api/src/: compat.rs  convert.rs  dto.rs  error_mapping.rs  errors.rs  lib.rs  openapi.rs  params.rs  responses.rs  wire.rs
crates/bijux-atlas-api/tests/: README.md  compat_and_error_mapping.rs  dependency_guardrails.rs  fake_query_adapter.rs  openapi_lint.rs  params_validation.rs
crates/bijux-atlas-bench/: CONTRACT.md  Cargo.toml  README.md
crates/bijux-atlas-bench/docs/: benchmark-architecture.md  benchmark-roadmap.md  benchmark-usage.md
crates/bijux-atlas-bench/src/: config.rs  dataset.rs
crates/bijux-atlas-bench/tests/: registry_contract.rs
crates/bijux-atlas-cli/: ARCHITECTURE.md  CONTRACT.md  Cargo.toml  README.md  TESTING.md
crates/bijux-atlas-cli/docs/: CLI_COMMAND_LIST.md  CONFIG_DISCOVERY.md  EXIT_CODES.md  INDEX.md  PLUGIN_CONTRACT.md  PLUGIN_METADATA_SNAPSHOT.json  PUBLIC_API.md  architecture.md  benchmarks.md  cli-command-list.md  cli-ux-contract.md  command-surface.md  errors.md  examples.md  index.md  plugin-contract.md  public-api.md  testing.md  versioning.md
crates/bijux-atlas-cli/examples/: main_entry_contract.rs
crates/bijux-atlas-cli/src/: artifact_validation.rs  atlas_command_actions.rs  atlas_command_dispatch.rs  command_output_adapters.rs  commands.rs  helpers.rs  lib.rs  main.rs
crates/bijux-atlas-cli/tests/: README.md  cli_contract_surface.rs  e2e_workflows.rs  lib_contracts.rs  no_network_policy.rs  plugin_conformance.rs  umbrella_interaction.rs  user_cli_surface_contracts.rs
crates/bijux-atlas-client/: CONTRACT.md  Cargo.toml  README.md
crates/bijux-atlas-client-python/: README.md  pyproject.toml
crates/bijux-atlas-client-python/docs/: ecosystem-integrations.md  quickstart.md
crates/bijux-atlas-client-python/examples/: dataset_scan.py  filtered_query.py  pagination.py  simple_query.py  streaming_results.py
crates/bijux-atlas-client-python/tests/: test_error_classification.py  test_integration.py  test_performance.py  test_retry.py  test_runtime_compatibility.py  test_schema_validation.py  test_unit.py
crates/bijux-atlas-client/benches/: client_sdk.rs
crates/bijux-atlas-client/config/: client-config.schema.json
crates/bijux-atlas-client/examples/: client-cli.rs  dataset-scan.rs  filtered-query.rs  pagination.rs  simple-query.rs  streaming-results.rs
crates/bijux-atlas-client/src/: client.rs  client_tests.rs  config.rs  lib.rs  metrics.rs  query.rs  request.rs  retry.rs
crates/bijux-atlas-client/tests/: integration_client.rs  metrics_and_schema.rs  mock_server_client.rs  retry_and_config.rs  runtime_compatibility.rs
crates/bijux-atlas-core/: ARCHITECTURE.md  BENCHMARKS.md  CONTRACT.md  Cargo.toml  ERROR_TAXONOMY.md  README.md
crates/bijux-atlas-core/benches/: canonical_hash.rs  (+2 more)
crates/bijux-atlas-dev/: Cargo.toml  README.md
crates/bijux-atlas-dev-core/: Cargo.toml  README.md
crates/bijux-atlas-ingest/: ARCHITECTURE.md  BENCHMARKS.md  CONTRACT.md  Cargo.toml  ERROR_TAXONOMY.md  EXAMPLES.md  PUBLIC_API.md  README.md  VERSIONING.md
crates/bijux-atlas-model/: ARCHITECTURE.md  BENCHMARKS.md  CONTRACT.md  Cargo.toml  README.md  TESTING.md
crates/bijux-atlas-policies/: ARCHITECTURE.md  BENCHMARKS.md  CONTRACT.md  Cargo.toml  ERROR_TAXONOMY.md  EXAMPLES.md  PUBLIC_API.md  README.md  TESTING.md
crates/bijux-atlas-python/: Cargo.toml  README.md  pyproject.toml
crates/bijux-atlas-query/: ARCHITECTURE.md  CONTRACT.md  Cargo.toml  EXAMPLES.md  README.md  TESTING.md
crates/bijux-atlas-server/: BENCHMARKS.md  CONTRACT.md  Cargo.toml  ERROR_TAXONOMY.md  EXAMPLES.md  README.md
crates/bijux-atlas-store/: ARCHITECTURE.md  CONTRACT.md  Cargo.toml  ERROR_TAXONOMY.md  EXAMPLES.md  README.md  TESTING.md
crates/bijux-dev-atlas/: ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  COMMAND_SURFACE.md  CONTRACT.md  CRATE_CONVERGENCE_CHECKPOINT.md  Cargo.toml  ERRORS.md  EXAMPLES.md  README.md  TESTING.md  build.rs  docs_runtime_ownership.md  merge_banlist.txt
crates/bijux-dev-atlas-adapters/: ADAPTER_BOUNDARY.md  ARCHITECTURE.md  BENCHMARKS.md  CONTRACT.md  Cargo.toml  ERROR_TAXONOMY.md  EXAMPLES.md  README.md  TESTING.md  VERSIONING.md
crates/bijux-dev-atlas-core/: ARCHITECTURE.md  BENCHMARKS.md  CONTRACT.md  Cargo.toml  ERROR_TAXONOMY.md  EXAMPLES.md  README.md  TESTING.md  VERSIONING.md
crates/bijux-dev-atlas-model/: ARCHITECTURE.md  BENCHMARKS.md  CONTRACT.md  Cargo.toml  DATA_MODEL.md  ERROR_TAXONOMY.md  EXAMPLES.md  README.md  TESTING.md  VERSIONING.md
crates/bijux-dev-atlas-policies/: ARCHITECTURE.md  BENCHMARKS.md  CONTRACT.md  Cargo.toml  ERROR_TAXONOMY.md  EXAMPLES.md  EXTENSION_GUIDE.md  README.md  TESTING.md  VERSIONING.md
crates/bijux-umbrella/: Cargo.toml
crates/bijux-versioning/: Cargo.toml  README.md
tools/bijux-atlas-py/: pyproject.toml
tools/bijux_atlas_scripts/: README.md  pyproject.toml
(+8704 files in other folders)
