[workspace]
members = [
  "crates/bijux-dev-atlas",
  "crates/bijux-atlas",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.1"
license = "Apache-2.0"
rust-version = "1.84.1"
description = "Deterministic atlas data platform and Rust control-plane"
repository = "https://github.com/bijux/bijux-atlas.git"
homepage = "https://github.com/bijux/bijux-atlas"
keywords = ["atlas", "bioinformatics", "genomics", "deterministic", "cli"]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bijux-atlas = { version = "=0.1.1", path = "crates/bijux-atlas" }
bijux-dev-atlas = { version = "=0.1.1", path = "crates/bijux-dev-atlas" }
