[workspace]
members = [
  "crates/bijux-dev-atlas",
  "crates/bijux-atlas",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.2.1"
license = "Apache-2.0"
rust-version = "1.86.0"
description = "Genomics dataset delivery platform for immutable artifacts, gene-query APIs, and Rust-owned repository automation"
repository = "https://github.com/bijux/bijux-atlas.git"
homepage = "https://bijux.github.io/bijux-atlas/"
keywords = ["bioinformatics", "genomics", "gff3", "fasta", "gene-query"]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bijux-atlas = { version = "=0.2.1", path = "crates/bijux-atlas" }
bijux-dev-atlas = { version = "=0.2.1", path = "crates/bijux-dev-atlas" }
bijux-cli = "0.3.5"
semver = "1"
