[package]
name = "bijux-atlas-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bijux-atlas-core.workspace = true
bijux-atlas-model.workspace = true
bijux-atlas-query.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion = "0.5"

[lib]
path = "src/lib.rs"

[[bin]]
name = "atlas-openapi"
path = "src/bin/openapi.rs"

[[bench]]
name = "openapi_generation"
harness = false
