[package]
name = "bijux-atlas-api"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "OpenAPI and wire contract crate for atlas APIs"
repository.workspace = true
homepage.workspace = true
keywords = ["atlas", "api", "openapi", "contracts", "serde"]

[dependencies]
bijux-atlas-core.workspace = true
bijux-atlas-model.workspace = true
bijux-atlas-query.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion = "0.8"

[lib]
path = "src/lib.rs"

[[bin]]
name = "atlas-openapi"
path = "src/bin/openapi.rs"

[[bench]]
name = "openapi_generation"
harness = false
