[package]
name = "bijux-atlas-api"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "OpenAPI and wire contract crate for atlas APIs"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/bijux-atlas-api"
readme = "README.md"
categories = ["api-bindings", "science"]
keywords = ["atlas", "api", "openapi", "contracts", "serde"]

[dependencies]
bijux-atlas.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion = "0.5"

[lib]
path = "src/lib.rs"

[[bin]]
name = "atlas-openapi"
path = "src/bin/openapi.rs"

[[bench]]
name = "openapi_generation"
harness = false
