[package]
name = "bijux-atlas-benchmark"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "Benchmark harness primitives and reproducible performance dataset contracts for bijux-atlas"
repository.workspace = true
homepage.workspace = true
keywords = ["atlas", "benchmark", "performance", "deterministic", "harness"]
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lib]
path = "src/lib.rs"
