[package]
name = "bijux-atlas-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bijux-atlas-core.workspace = true
bijux-atlas-model.workspace = true
bijux-atlas-ingest.workspace = true
bijux-atlas-store.workspace = true
bijux-atlas-query.workspace = true
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "=3.13.0"

[[bin]]
name = "bijux-atlas"
path = "src/bin/bijux-atlas.rs"
