[package]
name = "bijux-atlas-cli"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "End-user atlas CLI for dataset and query workflows"
repository.workspace = true
homepage.workspace = true
keywords = ["atlas", "cli", "datasets", "query", "contracts"]

[dependencies]
bijux-atlas-core.workspace = true
bijux-atlas-model.workspace = true
bijux-atlas-ingest.workspace = true
bijux-atlas-store.workspace = true
bijux-atlas-query.workspace = true
bijux-atlas-policies.workspace = true
serde.workspace = true
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json.workspace = true
tar = "0.4"
zstd = "0.13"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "=3.25.0"

[[bin]]
name = "bijux-atlas"
path = "src/bin/bijux-atlas.rs"
