[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-client"
version = "0.1.0"
description = "Python SDK for Atlas HTTP APIs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "bijux" }]
keywords = ["atlas", "sdk", "client", "api"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/bijux/bijux-atlas"
Repository = "https://github.com/bijux/bijux-atlas"
Documentation = "https://bijux.github.io/bijux-atlas/api/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["python"]
include = ["atlas_client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
