[package]
name = "bijux-atlas-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Rust client SDK for Atlas HTTP APIs"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/bijux-atlas-client"
readme = "README.md"
categories = ["api-bindings", "science"]
keywords = ["atlas", "client", "sdk", "api", "http"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }

[dev-dependencies]
serde_json.workspace = true
criterion = "0.5"

[[bin]]
name = "bijux-atlas-client"
path = "src/bin/bijux-atlas-client.rs"

[[bench]]
name = "client_sdk"
harness = false
