[package]
name = "bijux-atlas-core"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "Domain primitives and deterministic core contracts for bijux-atlas"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/bijux-atlas-core"
readme = "README.md"
categories = ["data-structures", "science"]
keywords = ["atlas", "core", "contracts", "deterministic", "genomics"]

[features]
default = ["serde"]
serde = ["dep:serde_json"]

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
serde_yaml = "0.9"
sha2 = "0.10"

[dev-dependencies]
criterion = "0.5"
proptest = "1"
serde_json.workspace = true
walkdir = "2"
tempfile = "=3.13.0"

[lib]
path = "src/lib.rs"

[[bench]]
name = "canonical_hash"
harness = false

[[bench]]
name = "stable_selector"
harness = false
