[package]
name = "bijux-atlas-dev-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bijux-atlas-dev-model.workspace = true
bijux-atlas-dev-adapters.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
