[package]
name = "bijux-atlas-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
bench-ingest-throughput = []

[dependencies]
bijux-atlas-core.workspace = true
bijux-atlas-model.workspace = true
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion = "0.5"
tempfile = "=3.13.0"

[lib]
path = "src/lib.rs"

[[bench]]
name = "ingest_throughput"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "transcript_extraction"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "fai_validation_overhead"
harness = false
required-features = ["bench-ingest-throughput"]
