[package]
name = "bijux-atlas-ingest"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "Deterministic ingestion pipeline for atlas artifacts"
repository.workspace = true
homepage.workspace = true
keywords = ["atlas", "ingest", "gff", "fasta", "deterministic"]

[features]
default = []
bench-ingest-throughput = []

[dependencies]
bijux-atlas-core.workspace = true
bijux-atlas-model.workspace = true
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
serde.workspace = true
serde_json.workspace = true
unicode-normalization = "0.1"
zstd = "0.13"

[dev-dependencies]
criterion = "0.5"
proptest = "1"
tempfile = "=3.25.0"

[lib]
path = "src/lib.rs"

[[bench]]
name = "ingest_throughput"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "transcript_extraction"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "fai_validation_overhead"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "sqlite_query_latency"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "db_size_growth"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_large_scenario"
harness = false
required-features = ["bench-ingest-throughput"]
