[package]
name = "bijux-atlas-ingest"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "Deterministic ingestion pipeline for atlas artifacts"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/bijux-atlas-ingest"
readme = "README.md"
categories = ["science", "database"]
exclude = ["tests/fixtures/**"]
keywords = ["atlas", "ingest", "gff", "fasta", "deterministic"]

[features]
default = []
bench-ingest-throughput = []

[dependencies]
bijux-atlas-core.workspace = true
bijux-atlas-model.workspace = true
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
serde.workspace = true
serde_json.workspace = true
unicode-normalization = "0.1"
zstd = "0.13"

[dev-dependencies]
criterion = "0.5"
proptest = "1"
tempfile = "=3.13.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bijux-atlas-ingest"
path = "src/bin/bijux-atlas-ingest.rs"

[[bench]]
name = "ingest_throughput"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "transcript_extraction"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "fai_validation_overhead"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "sqlite_query_latency"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "db_size_growth"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_large_scenario"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_scenarios"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "gff3_parsing_throughput"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "fasta_loading_throughput"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "sqlite_write_performance"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "manifest_generation_latency"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_resource_tracking"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_anomaly_overhead"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_validation_overhead"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_hashing_overhead"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_shard_generation_overhead"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_catalog_generation"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_parallelism_scaling"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_thread_pool_scaling"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_shard_distribution"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_artifact_size"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_artifact_compression"
harness = false
required-features = ["bench-ingest-throughput"]
