[package]
name = "bijux-atlas-model"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1"
serde_json.workspace = true

[lib]
path = "src/lib.rs"

[[bench]]
name = "dataset_parse"
harness = false
