[package]
name = "bijux-atlas-model"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
criterion = "0.5"
proptest = "1"
serde_json.workspace = true

[lib]
path = "src/lib.rs"

[[bench]]
name = "dataset_parse"
harness = false

[[bench]]
name = "parse_validation"
harness = false

[[bench]]
name = "model_codec"
harness = false
