[package]
name = "bijux-atlas-model"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "Persisted atlas data models and serde contracts"
repository.workspace = true
homepage.workspace = true
keywords = ["atlas", "model", "serde", "contracts", "genomics"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
criterion = "0.8"
proptest = "1"
serde_json.workspace = true

[lib]
path = "src/lib.rs"

[[bench]]
name = "dataset_parse"
harness = false

[[bench]]
name = "parse_validation"
harness = false

[[bench]]
name = "model_codec"
harness = false
