[package]
name = "bijux-atlas-policies"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
criterion = "0.5"
serde_json.workspace = true

[lib]
path = "src/lib.rs"

[[bench]]
name = "policy_validate"
harness = false
