[package]
name = "bijux-atlas-policies"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "Policy evaluation rules and violation contracts for atlas"
repository.workspace = true
homepage.workspace = true
keywords = ["atlas", "policy", "validation", "rules", "contracts"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
criterion = "0.8"
serde_json.workspace = true

[lib]
path = "src/lib.rs"

[[bench]]
name = "policy_validate"
harness = false

[[bench]]
name = "policy_evaluation"
harness = false
