[package]
name = "bijux-atlas-policies"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "Policy evaluation rules and violation contracts for atlas"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/bijux-atlas-policies"
readme = "README.md"
categories = ["config", "science"]
exclude = ["tests/fixtures/**"]
keywords = ["atlas", "policy", "validation", "rules", "contracts"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
criterion = "0.5"

[lib]
path = "src/lib.rs"

[[bench]]
name = "policy_validate"
harness = false

[[bench]]
name = "policy_evaluation"
harness = false
