[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "bijux-atlas"
dynamic = ["version"]
description = "Python SDK for Bijux Atlas"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Bijux Atlas" }]
keywords = ["bijux", "atlas", "sdk", "genomics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed"
]
dependencies = [
  "requests>=2.32.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "ruff>=0.6.0,<1.0.0",
  "mypy>=1.11.0,<2.0.0"
]
build = [
  "build>=1.2.1,<2.0.0",
  "maturin>=1.7,<2.0",
  "twine>=6.1.0,<7.0.0"
]

[project.urls]
Homepage = "https://github.com/bijux/bijux-atlas"
Documentation = "https://bijux.github.io/bijux-atlas/"
Repository = "https://github.com/bijux/bijux-atlas"

[tool.maturin]
python-source = "python"
module-name = "bijux_atlas._native"
manifest-path = "Cargo.toml"
features = ["python-extension"]
include = [{ path = "README.md", format = "sdist" }]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
markers = [
  "unit: fast unit tests",
  "integration: runtime integration tests requiring explicit environment",
  "perf: performance-sensitive optional tests"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
