[package]
name = "bijux-atlas-query"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bijux-atlas-core.workspace = true
bijux-atlas-model.workspace = true
bijux-atlas-policies.workspace = true
bijux-atlas-store.workspace = true
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
serde.workspace = true
serde_json.workspace = true
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
criterion = "0.5"
tempfile = "=3.13.0"

[[bench]]
name = "query_patterns"
harness = false

[lib]
path = "src/lib.rs"
