[package]
name = "bijux-atlas-query"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "Typed query parsing, planning, and execution for atlas"
repository.workspace = true
homepage.workspace = true
keywords = ["atlas", "query", "planner", "sqlite", "deterministic"]

[dependencies]
bijux-atlas-core.workspace = true
bijux-atlas-model.workspace = true
bijux-atlas-policies.workspace = true
bijux-atlas-store.workspace = true
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
serde.workspace = true
serde_json.workspace = true
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
unicode-normalization = "0.1"

[dev-dependencies]
criterion = "0.8"
proptest = "1"
tempfile = "=3.13.0"

[[bench]]
name = "query_patterns"
harness = false

[[bench]]
name = "query_concurrency"
harness = false

[[bench]]
name = "query_stages"
harness = false

[lib]
path = "src/lib.rs"
