[package]
name = "bijux-atlas-server"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "Runtime HTTP service implementing atlas API contracts"
repository.workspace = true
homepage.workspace = true
keywords = ["atlas", "server", "http", "axum", "genomics"]

[dependencies]
bijux-atlas-api.workspace = true
bijux-atlas-core.workspace = true
bijux-atlas-model.workspace = true
bijux-atlas-query.workspace = true
bijux-atlas-store.workspace = true
axum = "0.7"
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled", "hooks"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
toml = "1.0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset", "json"] }
flate2 = "1.0"
brotli = "6"
redis = { version = "0.27", features = ["tokio-comp"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[features]
default = []
jemalloc = ["dep:tikv-jemallocator"]

[dependencies.tikv-jemallocator]
version = "0.6"
optional = true

[dev-dependencies]
tempfile = "=3.13.0"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
regex = "1.11"

[[bench]]
name = "cache_manager"
harness = false

[[bench]]
name = "sequence_fetch"
harness = false

[[bench]]
name = "diff_merge"
harness = false

[[bench]]
name = "bulkhead_tuning"
harness = false

[[bench]]
name = "gene_lookup_p99"
harness = false

[[bench]]
name = "query_validate"
harness = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "atlas-server"
path = "src/main.rs"
