[package]
name = "bijux-atlas-store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["backend-s3"]
backend-s3 = []

[dependencies]
bijux-atlas-core.workspace = true
bijux-atlas-model.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
criterion = "0.5"
tempfile = "3.13.0"
serde_json.workspace = true
tiny_http = "0.12"

[lib]
path = "src/lib.rs"

[[bench]]
name = "checksum_pipeline"
harness = false

[[bench]]
name = "catalog_merge"
harness = false

[[bench]]
name = "store_hot_read"
harness = false
