[package]
name = "bijux-atlas-store"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "Storage contracts and backends for atlas artifacts"
repository.workspace = true
homepage.workspace = true
keywords = ["atlas", "storage", "s3", "contracts", "artifacts"]

[features]
default = ["backend-local"]
backend-local = []
backend-s3 = ["dep:reqwest", "backend-local"]

[dependencies]
bijux-atlas-core.workspace = true
bijux-atlas-model.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "http2"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
criterion = "0.5"
tempfile = "3.13.0"
serde_json.workspace = true
tiny_http = "0.12"

[lib]
path = "src/lib.rs"

[[bench]]
name = "checksum_pipeline"
harness = false

[[bench]]
name = "catalog_merge"
harness = false

[[bench]]
name = "store_hot_read"
harness = false
