[package]
name = "bijux-atlas"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "End-user atlas CLI for dataset and query workflows"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/bijux-atlas"
readme = "README.md"
categories = ["command-line-utilities", "science"]
exclude = ["tests/fixtures/**"]
keywords = ["atlas", "cli", "datasets", "query", "contracts"]

[features]
default = ["serde"]
serde = []

[dependencies]
bijux-atlas-model.workspace = true
bijux-atlas-ingest.workspace = true
bijux-atlas-store.workspace = true
bijux-atlas-query.workspace = true
bijux-atlas-policies.workspace = true
base64 = "0.22"
serde.workspace = true
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json.workspace = true
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
zstd = "0.13"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "=3.13.0"

[[bin]]
name = "bijux-atlas"
path = "src/bin/bijux-atlas.rs"
